# mmu

./: .gitignore  clip.py  contexts.json  deep.py  gemini-topic.json  gepa_evolve.py  gepa_trial.py  gepa_trial_gepa_lite.py  gpt-topic-background.json  prompts copy.json  prompts.json  pyproject.toml  requirements.txt  scripts.json
?/: build_promptmaps.py  evaluate_simple.py  evaluate_vbench.py  evaluate_videos.py  naive_prompts_vbench.json  prompts_deep.json  prompts_naive.json  run_eval.py  run_vbench.py
cache/: 144e95d20e892aaf.json  307dea2db5c4faed.json  4b5252af8379d6c2.json  4c8f9b4dca923e94.json  58473de703878463.json  6ab4a0749a0c702e.json  6b29026a05c4aa44.json  6f58c6e320397820.json  777317254cee2a47.json  7e3df40ab5ce760c.json  7e4840803cbc0d8e.json  a1d17f88af0adc0d.json  a906547eab062b18.json  b4d501905d6316f6.json  b615782874306591.json  b7108e0c0c44be8f.json  be7da91d3c709ed0.json  c11e65277ad7e456.json  c833c911dacc6cc1.json  cee88cabd072114e.json
clip-eval/: audit_references.py  clip.py  clip_results.json  clip_results_detailed.json  report.py  results.txt
evaluator/: package-lock.json  package.json
gepa_lite/: __main__.py  config.py  evaluation.py  llm.py  logging_utils.py  models.py  runner.py
gepa_lite_runs/: best_prompt_.txt  config.json  detailed_evaluations.json  gepa_lite_run_trace.txt  results.txt  search_history.json
gepa_trial_runs/: best_prompt.txt  gepa_trial_20260402_124159.json
runs/: best_prompt_20260311_212856.txt  best_prompt_20260311_231151.txt  best_prompt_20260312_093455.txt  gepa_20260311_171956.json  gepa_20260311_205641.json  gepa_20260311_205728.json  gepa_20260311_210140.json  gepa_20260311_212856.json  gepa_20260311_215218.json  gepa_20260311_225321.json  gepa_20260311_225438.json  gepa_20260311_225630.json  gepa_20260311_231151.json  gepa_20260312_093455.json  gepa_run_trace_20260403_144615.txt  results.txt
vbench-eval/: expectations.json  (+2 more)
(+82 files in other folders)
